--- a/site.yml
+++ b/site.yml
@@ -5,12 +5,14 @@
   pre_tasks:
 
   - name: install updates (CentOS)
+    tags: always
     dnf:
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -22,6 +24,7 @@
   tasks:
 
   - name: install apache and php packages for Ubuntu Servers
+    tags: apache2,ubuntu,php
     apt:
       name: 
         - apache2
@@ -30,6 +33,7 @@
     when: ansible_distribution == "Ubuntu"
 
   - name: install apache and php packages for CentOS Servers
+    tags: apache,centos,httpd
     dnf:
       name: 
         - httpd
@@ -44,6 +48,7 @@
 
 
   - name: install mariadb package (CentOS)
+    tags: centos,db,mariadb
     dnf:
       name: mariadb
       state: latest
@@ -51,7 +56,8 @@
 
 
   - name: install mariadb package (Ubuntu)
-    apt:
+    tags: ubuntu,db,mariadb
+    apt: 
       name: mariadb-server
       state: latest
     when: ansible_distribution == "Ubuntu"
