--- a/site.yml
+++ b/site.yml
@@ -41,6 +41,15 @@
       state: latest
     when: ansible_distribution == "CentOS"
 
+  - name: Copy dafault_site.html
+    tags: apache, apache2,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 
 - hosts: db_servers
   become: true
