--- a/my-DevOps-Lab/role/node-exporter/tasks/main.yml
+++ b/my-DevOps-Lab/role/node-exporter/tasks/main.yml
@@ -35,4 +35,30 @@
 - name: move the binary to the final destination
   ansible.builtin.copy:
     src: "/tmp/node_exporter-{{ node_exporter_version }}.linux-amd64/node_exporter"
-    dest: 
+    dest: "{{ node_exporter_bin }}"
+    owner: "{{ node_exporter_user }}"
+    group: "{{ node_exporter_group }}"
+    mode: 0755
+    remote_src: yes
+  when: __check_node_exporter_present.stat.exists == false or not __get_node_exporter_version.stdout == node_exporter_version
+
+- name: clean
+  ansible.builtin.file:
+    path: /tmp/node_exporter-{{ node_exporter_version }}.linux-amd64/
+    state: absent
+
+- name: load and start node_exporter service
+  ansible.builtin.template:
+    src: node_exporter.service.j2
+    dest: /etc/systemd/system/node_exporter.service
+    owner: root
+    group: root
+    mode: 0755
+  notify: reload_daemon_and_restart_node_exporter
+- meta: service always started
+
+- name: service always started
+  ansible.builtin.systemd:
+    name: node_exporter
+    state: started
+    enabled: yes
