--- a/my-DevOps-Lab/role/node-exporter/handlers/main.yml
+++ b/my-DevOps-Lab/role/node-exporter/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for role/node-exporter
+- name: relaod_daemon_and_restart_node_exporter
+  ansible.builtin.systemd:
+    name: node_exporter
+    state: restarted
+    daemon_reload: yes
+    enabled: yes
