add new play for node-exporter

--- a/my-DevOps-Lab/site.yml
+++ b/my-DevOps-Lab/site.yml
@@ -1,8 +1,5 @@
----
-- name: Configure node_exporter on Kubernetes Clusters nodes
+- name: install node-exporter
   hosts: k8sCluster
-  remote_user: root
-
-  tasks:
-  - name: Download Node exporter to Cluster nodes
-    ansible.builtin.apt:
+  become: yes
+  roles:
+  - node-exporter
