--- a/my-DevOps-Lab/roles/node-exporter/tasks/main.yml
+++ b/my-DevOps-Lab/roles/node-exporter/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: if node exporter exist get version
   shell: "cat /etc/systemd/system/node_exporter.service | grep Version | sed s/'.*Version '//g"
-  when: __check_node_exporter_present.sat.exists == true
+  when: __check_node_exporter_present.stat.exists == true
   changed_when: false
   register: __get_node_exporter_version
 
@@ -55,7 +55,7 @@
     group: root
     mode: 0755
   notify: reload_daemon_and_restart_node_exporter
-- meta: service always started
+- meta: flush_handlers
 
 - name: service always started
   ansible.builtin.systemd:
