create new roles

--- a/pki-lab-environment/inventory/inventory.yml
+++ b/pki-lab-environment/inventory/inventory.yml
@@ -3,3 +3,9 @@ all:
     ca-server:
       hosts:
         ca.bbtlab.com:
+    databases:
+      hosts:
+        database.bbtlab.com:
+    webservers:
+      hosts:
+        webnginx.bbtlab.com:
