--- a/pki-lab-environment/roles/postgresql/tasks/main.yml
+++ b/pki-lab-environment/roles/postgresql/tasks/main.yml
@@ -1,17 +1,27 @@
 ---
-# tasks file for role/postgresql
-- name: "Install packages"
-  ansible.built.dnf: 
+# tasks file for role/postgresql    
+- name: Install packages
+  ansible.builtin.dnf: 
     name: '{{ item }}'
     state: present
   with_items:
     - postgresql
     - postgresql-server
 
-- name: "Install Python packages"
-  ansible.builtin.pip:
-    name: psycopg2-binary
-    state: present
+- name: Install Python 3
+  ansible.builtin.dnf:
+    name: python3
+    state: latest
+
+- name: Install Pip for Python 3
+  ansible.builtin.dnf:
+    name: python3-pip
+    state: latest
+
+#- name: Install Python packages
+#  ansible.builtin.pip:
+#    name: psycopg3-binary
+#    state: present
 
 - name: Find out if PostgreSQL is initialized
   ansible.builtin.stat:
@@ -19,19 +29,20 @@
   register: postgres_data
 
 - name: Initialize PostgreSQL
-  ansible.builtin.shell: postgresql-setup initdb
+  ansible.builtin.shell: 
+    cmd: postgresql-setup initdb
   when: not postgres_data.stat.exists
 
 - name: Start and enable services
   ansible.builtin.systemd:
-    name: postresql
+    name: postgresql
     state: started
     enabled: "yes"
 
 
-- name: Install a modularity appstream for Posgresql with defined stream
-  ansible.builtin.dnf: 
-  name: '@postgresql:{{ postgresql_version }}'
-  state: present
-
-- name: Create a New PostgreSQL Database Cluster
+#- name: Install a modularity appstream for Posgresql with defined stream
+#  ansible.builtin.dnf: 
+#  name: '@postgresql:{{ postgresql_version }}'
+#  state: present
+#
+#- name: Create a New PostgreSQL Database Cluster
