--- a/pki-lab-environment/playbooks/site.yml
+++ b/pki-lab-environment/playbooks/site.yml
@@ -1,15 +1,13 @@
 - name: Install and configure PostgreSQL
   hosts: databases
-  remote_user: dbuser
-  become: true
-  become_user: yes
+  #remote_user: 
+  become_user: true
   roles:
     - role: './roles/postgresql'
 
 - name: Configure nginx server
   hosts: webservers
-  remote_user: servuser
-  become: true
-  become_user: yes
+  #remote_user: servuser
+  become_user: true
   roles:
     - role: './roles/nginx-webserver'
